--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
             <li id="ItemContato"><a href="#">Contato</a></li>
         </ul>
     </nav>
+    <main>
+        <section>
+            <div class="container flex-container">
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
