--- a/index.html
+++ b/index.html
@@ -21,10 +21,72 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <!-- SOBRE NÓS -->
+        <section class="fundo-verde">
             <div class="container flex-container">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <h2>sobre nós</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic provident consectetur quidem voluptate neque non! Pariatur minima laborum vitae beatae. Quaerat, dolores recusandae voluptatum possimus aperiam harum est. Amet, atque.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit odio nulla praesentium sunt quis aut nisi distinctio porro? Consectetur quas ab nesciunt ipsam est! Blanditiis ab odit natus soluta error.</p>
+                </div>
+                <div class="col">
+                    <img src="./img/img-sobre.jpg" alt="cachorros">
+                </div>
+            </div>
+        </section>
+        <section id="Produto">
+            <div class="container">
+                <h2 class="texto-centralizado">
+                    produtos
+                </h2>
+                <p class="texto-centralizado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam quis modi magni, ducimus, autem ratione repellat expedita nisi atque incidunt dignissimos? Minima facilis odio quia nulla cumque, placeat unde!</p>
+                <div class="flex-container">
+                    <div class="produto">
+                        <figure>
+                            <img src="./img/produto-1.jpg" alt="Produto pet 1">
+                        </figure>
+                        <h3>
+                            Pet produto #1
+                        </h3>
+                        <p>
+                            R$ 150,00
+                        </p>
+                        <a href="#" class="btn-pata">
+                            <img src="./img/patinha-preta.png" alt="Patinha preta">
+                            comprar
+                        </a>
+                    </div>
+                    <div class="produto">
+                        <figure>
+                            <img src="./img/produto-2.jpg" alt="Produto pet 2">
+                        </figure>
+                        <h3>
+                            Pet produto #2
+                        </h3>
+                        <p>
+                            R$ 150,00
+                        </p>
+                        <a href="#" class="btn-pata">
+                            <img src="./img/patinha-preta.png" alt="Patinha preta">
+                            comprar
+                        </a>
+                    </div>
+                    <div class="produto">
+                        <figure>
+                            <img src="./img/produto-3.jpg" alt="Produto pet 3">
+                        </figure>
+                        <h3>
+                            Pet produto #3
+                        </h3>
+                        <p>
+                            R$ 150,00
+                        </p>
+                        <a href="#" class="btn-pata">
+                            <img src="./img/patinha-preta.png" alt="Patinha preta">
+                            comprar
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
