--- a/index.html
+++ b/index.html
@@ -145,11 +145,25 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.3835836754265!2d-46.76851652396555!3d-23.697992278706128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5212f9627de5%3A0x1c5ccd29c1a3e96a!2sEtec%20Jardim%20%C3%82ngela!5e0!3m2!1spt-BR!2sbr!4v1762469172097!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <p>Estr. da Baronesa, 1695 - Jardim Ângela - São Paulo-SP <br>
                         <strong>CEP:</strong>042.801-000 <br>
-                        <strong>Telefone:</strong> (11)5833-0861 <br
+                        <strong>Telefone:</strong> (11)5833-0861 <br>
                         </p>
                     </div>
                 </div>
         </section>
     </main>
+    <footer>
+        <div class="dev">
+            <p><strong>Desenvolvido por João Pastori</strong></p>
+            <A href="https://www.linkedin.com/" target="_blank"></A>
+                <img src="img/linkedin-in-brands-solid-full.svg" alt="linkedin" width="40" height="40">
+            </A>
+            <A href="https://github.com/jppastori" target="_blank"></A>
+                <img src="img/square-github-brands-solid-full.svg" alt="github" width="40" height="40">
+            </A>
+            <A href="https://www.linkedin.com/" target="_blank"></A>
+                <img src="img/instagram-brands-solid-full.svg" alt="instagram" width="40" height="40">
+            </A>
+        </div>
+    </footer>
 </body>
 </html>
